# wd-qtr-gsi-builder

./: .gitignore  AGENTS.md  GPTAnalysisWorkerDetails-QTF5200.xlsx  README.md  ReadMe.txt  check-version.sh  maven-deploy.sh  maven-test.sh  pom.xml  pyproject.toml  pytest.ini  pytest_ci.ini  requirements.txt  test_simple_unit.py
db/local/: README.md  docker-compose.yml
db/local/init/metadata/: 01_schema.sql  02_seed_gi.sql
db/local/init/redshift/: 01_schema.sql  02_seed.sql
docs/: gsi-builder-success-failure-scenarios.md  gsi-error-based-exclusion-analysis.md  gsi-error-skip-design-proposal.md  gsi-error-skip-implementation-notes.md  gsi-error-skip-layman-design.md  gsi-error-skip-master-design.md  gsi-error-skip-practical-scenarios.md  project-end-to-end.md  quarter-periodic-error-classification-design.md
docs/reference/: ASCII_EBCDIC_Rules.xlsx  GPTAnalysisWorkerDetails.xlsx  GSI_GE59_Q1_2026_20260425_110358.txt  README.md  cdm-error-catalog-simulation-seed-raw103.json  cdm-error-catalog-simulation-seed.json  cdm-error-simulation-readme.md  error-catalog-simulation-map-raw103.csv  error-catalog-simulation-map.csv  sample-event-and-gsi-output-notes.md  sample-periodic-tax-deposit-event.redacted.json
params/: application.yaml  common.yaml  data.tf  databricks.tf  dit.tfvars  fit.tfvars  iat.tfvars  main.tf  prod.tfvars  template.tfvars  variables.tf
src/wd/qtr/gsi_builder/: cache_utils.py  db_connection.py  email_notifier.py  error_classification.py  error_handler.py  flow_validator.py  gsi_formatter.py  gsi_mappings.py  logger.py  logger_util.py  main.py  manage_gsi_cache.py  mandatory_fields_validator.py  (+3 more)
tests/: test_error_classification.py  test_error_handler.py
(+7 files in other folders)
