[tool.poetry]
name = "wd-qtr-gsi-builder"
version = "1.7.5"
description = "WD Quarterly GSI Builder - PySpark application for processing quarterly employee data"
authors = ["tax-team@adp.com"]
readme = "README.md"
packages = [{ include = "wd", from = "src" }]
include = [
    { path = "src/libs", format = "wheel" },
    { path = "src/*.yaml", format = "wheel" },
    { path = "tests", format = "sdist" }
]

[tool.poetry.scripts]
main = "wd.qtr.gsi_builder.main:main"

[[tool.poetry.source]]
name = "adp"
url = "https://artifactory.us.caas.oneadp.com/artifactory/api/pypi/pypi/simple"
priority = "primary"

[[tool.poetry.source]]
name = "adp-internal"
url = "https://artifactory.us.caas.oneadp.com/artifactory/api/pypi/cs-pypi/simple"
priority = "supplemental"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
dynaconf = ">=3.2.12,<4.0.0"
kink = ">=0.8.0,<1.0.0"
scs-tax-common-pyspark = {version = "1.0.4", source = "adp-internal", python = ">=3.11,<3.12"}

[tool.poetry.group.dev.dependencies]
typing-extensions = "^4.12.0"
pyyaml = "^6.0.1"
pyspark = "^3.5.1"
boto3 = "^1.35.0"
requests = "^2.32.0"
numpy = ">=1.26.0,<2.0.0"
pytest = "^8.3.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
pytest-env = "^1.1.0"
localstack-client = "^2.8.0"
kafka-python = "^2.0.0"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
env = [
    "APP_LOGGING__handlers=['console']",
]
addopts = "-s -v -o junit_family=xunit1 --cov-report xml:coverage.xml --junitxml=results.xml --cov=src/ tests/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
